--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
       <div class="wrap__comment">
         <label for="inpComment">comment your mood with color 🎨</label>
-        <input type="text" id="inpComment" placeholder="write your...">
+        <input type="text" id="inpComment" placeholder="write your..." autofocus>
       </div>
       <div class="wrap__btn">
         <button type="button" id="btnSubmit">Submit</button>
@@ -29,15 +29,7 @@
         <button type="button" id="btnDark">야간</button>
       </div>
     </section>
-    <ol id="list">
-      <li id="id">
-        <div class="color"></div>
-        <h2>it's #aaaaaa</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisici maxime.</p>
-        <button onclick="">🗑</button>
-        <footer>2022.01.01 00:00</footer>
-      </li>
-    </ol>
+    <ol id="list"></ol>
   </main>
 
   <script src="./main.js"></script>
